--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="./client/stylesheets/style.css" type="text/css" rel="stylesheet"/>
+
+        <!-- <link rel="stylesheet/less" type="text/css" href="styles.less" /> -->
+        <!-- <script src="less.js" type="text/javascript"></script> -->
         <title></title>
     </head>
 
